RESOLVED FIXED161619
[WebRTC][OpenWebRTC] crash in maybeHandleChangeMutedState
https://bugs.webkit.org/show_bug.cgi?id=161619
Summary [WebRTC][OpenWebRTC] crash in maybeHandleChangeMutedState
Philippe Normand
Reported 2016-09-05 23:54:02 PDT
2 tests crashing: fast/mediastream/MediaStream-video-element-displays-buffer.html fast/mediastream/MediaStream-video-element-video-tracks-disabled.html #0 g_type_check_instance_cast () at /home/slave/webkitgtk/gtk-linux-64-release-tests/build/WebKitBuild/DependenciesGTK/Source/glib-2.44.1/gobject/gtype.c:4055 #1 0x00002adc3a88ded8 in _ZN7WebCore30MediaPlayerPrivateGStreamerOwr27maybeHandleChangeMutedStateERNS_23MediaStreamTrackPrivateE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #2 0x00002adc3a88e3b9 in _ZN7WebCore30MediaPlayerPrivateGStreamerOwr4playEv () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #3 0x00002adc39fb46cb in _ZN7WebCore16HTMLMediaElement15updatePlayStateENS0_11UpdateStateE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #4 0x00002adc39fb5511 in _ZN7WebCore16HTMLMediaElement12playInternalEv () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #5 0x00002adc39fb55fa in _ZN7WebCore16HTMLMediaElement4playEONS_10DOMPromiseIDnEE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #6 0x00002adc3ab328d1 in _ZN7WebCore39jsHTMLMediaElementPrototypeFunctionPlayEPN3JSC9ExecStateE () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 #7 0x00002adc4ae04028 in ?? () #8 0x00007fff674dd910 in ?? () #9 0x00002adc3c5b3671 in llint_entry () from /home/slave/webkitgtk/gtk-linux-64-release/build/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18
Attachments
Patch (5.75 KB, patch)
2016-09-14 04:19 PDT, Alejandro G. Castro
no flags
Patch for landing (5.68 KB, patch)
2016-09-15 01:16 PDT, Alejandro G. Castro
no flags
Philippe Normand
Comment 1 2016-09-06 00:12:45 PDT
Updated expectations in r205471
Alejandro G. Castro
Comment 2 2016-09-09 10:46:51 PDT
These tests were added in July and failing with before we added the flip or the muted state. Apple devs added them to check a couple of situations we still don't and we have issues because we are using a generic mock class and the player needs an owr media source. I'll check them because it is very interesting for us to add support for them.
Alejandro G. Castro
Comment 3 2016-09-14 04:19:35 PDT
Philippe Normand
Comment 4 2016-09-14 08:11:20 PDT
Comment on attachment 288804 [details] Patch Hum isn't it a bit strange to have implementation-specific code in the Mock?
WebKit Commit Bot
Comment 5 2016-09-15 00:56:43 PDT
Comment on attachment 288804 [details] Patch Rejecting attachment 288804 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 288804, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: /platform/mock/MockRealtimeMediaSource.h Hunk #1 FAILED at 35. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/platform/mock/MockRealtimeMediaSource.h.rej patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/gtk/TestExpectations Hunk #1 succeeded at 796 (offset -27 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Eric Carlson']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/2077817
Alejandro G. Castro
Comment 6 2016-09-15 01:16:05 PDT
Created attachment 288938 [details] Patch for landing
WebKit Commit Bot
Comment 7 2016-09-15 01:49:43 PDT
Comment on attachment 288938 [details] Patch for landing Clearing flags on attachment: 288938 Committed r205961: <http://trac.webkit.org/changeset/205961>
WebKit Commit Bot
Comment 8 2016-09-15 01:49:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.