[WebRTC][OpenWebRTC] crash in maybeHandleChangeMutedState https://bugs.webkit.org/show_bug.cgi?id=161619

Source/WebCore:

Added OpenWebRTC support to the RealtimeMediaSource mock class.

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-09-15
Reviewed by Eric Carlson.

Fixed tests.

* platform/mediastream/openwebrtc/RealtimeMediaSourceOwr.h:
(WebCore::RealtimeMediaSourceOwr::RealtimeMediaSourceOwr): Allowed
inheritance of the class, required to use it when creating the
mock class. Added a new constructor to create the class with null
mediastream.
* platform/mock/MockRealtimeMediaSource.cpp:
(WebCore::MockRealtimeMediaSource::MockRealtimeMediaSource): Use
the new BaseRealtimeMediaSourceClass in the constructor.
* platform/mock/MockRealtimeMediaSource.h: Added a new
BaseRealtimeMediaSourceClass defined using the
RealtimeMediaSourceOwr class for OpenWebRTC platform.

LayoutTests:

Patch by Alejandro G. Castro <alex@igalia.com> on 2016-09-15
Reviewed by Eric Carlson.

* platform/gtk/TestExpectations: Modify the expectations, the
tests do not crash anymore.

Canonical link: https://commits.webkit.org/180139@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205961 268f45cc-cd09-0410-ab3c-d52691b4dbfc